@@ -5,18 +5,20 @@
 
            Warn only once for disks unless value changes (Plan 0.2)
 
-           Check and confirm conf file when loaded (Plan v0.3)
-           Check data and parity disks are present (Plan v0.3)
-           Check and confirm conf settings (Plan v0.3)
-           Keep x amount of logs (Plan v0.3)
-
-           Add catches for snapraid DANGER! and Warning! messages (Plan v0.4)
-           Mount and unmount parity (Plan v0.4)
+           Code review (Plan 0.3)
            Use carp for errors and warnings (Plan 0.3)
-           Add NMA support (Plan v0.4)
-           Add Pushbullet support (Plan v0.4)
+
+           Check and confirm conf file when loaded (Plan v0.4)
+           Check data and parity disks are present (Plan v0.4)
+           Check and confirm conf settings (Plan v0.4)
+           Keep x amount of logs (Plan v0.4)
+
+           Add catches for snapraid DANGER! and Warning! messages (Plan v0.5)
+           Mount and unmount parity (Plan v0.5)
+           Add NMA support (Plan v0.5)
+           Add Pushbullet support (Plan v0.5)
            
-           Portablity (Work with windows) (Plan 0.5)
+           Portablity (Work with windows) (Plan 0.6)
 
            Go over code and clean (Ongoing)
            Drink beer! (Ongoing)
