@@ -16,6 +16,7 @@
             Added run dir for static data regarding last run
             Path added due to issue with snapraid.exe runnig smartctl
             OS type detected for future portablity compat
+            Basic install.sh script to automate install
 
 05/05/2016 v0.1
             Added emailing function for gmail and sendmail.
